@@ -785,7 +785,8 @@ class Builder(lexer.LexBuilder):
           filename: the current filename.
           lineno: the current line number.
           account: A string, the account of the posting.
-          position: An instance of Position from the grammar rule.
+          units: An instance of Amount for the units.
+          cost: An instance of CostSpec for the cost.
           price: Either None, or an instance of Amount that is the cost of the position.
           istotal: A bool, True if the price is for the total amount being parsed, or
                    False if the price is for each lot of the position.
@@ -793,10 +794,11 @@ class Builder(lexer.LexBuilder):
         Returns:
           A new Posting object, with no parent entry.
         """
+        meta = new_metadata(filename, lineno)
+
         # Prices may not be negative.
         if not __allow_negative_prices__:
             if price and isinstance(price.number, Decimal) and price.number < ZERO:
-                meta = new_metadata(filename, lineno)
                 self.errors.append(
                     ParserError(meta, (
                         "Negative prices are not allowed: {} "
@@ -825,7 +827,18 @@ class Builder(lexer.LexBuilder):
         #     self.errors.append(
         #         ParserError(meta, "Price is zero: {}".format(price), None))
 
-        meta = new_metadata(filename, lineno)
+        # If both cost and price are specified, the currencies must match, or
+        # that is an error.
+        if (cost is not None and
+            price is not None and
+            isinstance(cost.currency, str) and
+            isinstance(price.currency, str) and
+            cost.currency != price.currency):
+            self.errors.append(
+                ParserError(meta,
+                            "Cost and price currencies must match: {} != {}".format(
+                                cost.currency, price.currency), None))
+
         return Posting(account, units, cost, price, chr(flag) if flag else None, meta)
 
     def tag_link_new(self, _):
